--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Task list</title>
 </head>
-<body>
+<body class="body">
     <main class="task-list">
         <section class="task-name">
             <h1 class="task-name__headline headline">Task name</h1>
@@ -16,7 +17,7 @@
         <section class="subtasks">
             <div class="subtasks__caption">
                 <h2 class="subtasks__headline headline">Subtasks</h2>
-                <button class="subtasks__button button"></button>
+                <button class="subtasks__button button">+</button>
             </div>
             <div class="subtasks__task-wrapper">
                 <div class="subtasks__des">
@@ -26,8 +27,8 @@
                 </div>
                 <div class="subtasks__task">
                     <input type="text" class="subtasks__textarea textarea" placeholder="New task">
-                    <input type="number" class="subtasks__time" value="0">
-                    <button class="subtasks__button button"></button>
+                    <input type="number" class="subtasks__time textarea" value="0">
+                    <button class="subtasks__button-del button">X</button>
                 </div>
             </div>
         </section>
@@ -38,14 +39,16 @@
         <section class="all-task">
             <h2 class="all-task__headline headline">Task list</h2>
             <div class="all-task__task">
-                <img src="" alt="" class="all-task__avatar">
+                <div class="all-task__container">
+                    <span class="all-task__avatar"></span>
                 <div class="all-task__task-des">
-                    <p class="all-task__headline">Task name</p>
+                    <p class="all-task__headline-list">Task name</p>
                     <ul class="all-task__list">
                         <li class="all-task__item">New task - 20h</li>
                         <li class="all-task__item">New task - 20h</li>
                         <li class="all-task__item">New task - 20h</li>
                     </ul>
+                </div>
                 </div>
                 <button class="all-task__button">Load</button>
             </div>
